[package]
name = "intcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
enum-iterator = "1.5.0"
futures = "0.3.30"
icub3d_combinatorics = "0.1.1"
pathfinding = "4.8.2"
ratatui = "0.25.0"
rayon = "1.8.1"
tokio = { version = "1.35.1", features = ["full"] }
